
------------------------------------------------------------------------
r958 | gaser | 2016-06-21 17:22:38 +0200 (Di, 21 Jun 2016) | 8 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_check_system_output.m

Fixed: Error in cat_check_system_output.m due to special characters 
       under windows.

------------------------------------------------------------------------
r959 | gaser | 2016-06-23 11:23:32 +0200 (Do, 23 Jun 2016) | 16 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_check_system_output.m
M       cat_conf_stools.m
M       cat_run.m
M       cat_surf_render.m
M       cat_surf_surf2roi.m
M       tbx_cfg_cat.m

(1) Fixed: Error in cat_surf_surf2roi.m because of missing fieldname.
(2) Fixed: Parallel mode is disabled in deploayed mode.
(3) Changed: Added underlay function and some more functionality to
    cat_surf_render.m
(4) Fixed: Missing filed in cat_run.m if other DARTEl template was chosen.

------------------------------------------------------------------------
r960 | dahnke | 2016-06-24 09:51:08 +0200 (Fr, 24 Jun 2016) | 13 lines

Changed paths:
M       CHANGES.txt
M       cat_io_FreeSurfer.m
M       cat_io_report.m
M       cat_main.m
M       cat_surf_display.m
M       cat_surf_info.m
M       cat_surf_render.m

(1) Fixed*:   Updated SPM segmentation handling in cat_main. 
(2) Fixed:    Updated cat_surf_render function.


------------------------------------------------------------------------
r961 | gaser | 2016-06-24 11:30:22 +0200 (Fr, 24 Jun 2016) | 7 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_surf_render.m

Changed: Removed filename in windows in cat_surf_render.m 

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_surf_render.m

(1) Fixed:    Updated cat_surf_render function.

------------------------------------------------------------------------
r962 | dahnke | 2016-06-24 13:30:52