@@ -11224,6 +11224,7 @@ M       cat_surf_render.m
 Changed: Removed filename in windows in cat_surf_render.m 
 
 ------------------------------------------------------------------------
+r962 | dahnke | 2016-06-24 13:30:56 +0200 (Fr, 24 Jun 2016) | 7 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -11231,5 +11232,15 @@ M       cat_surf_render.m
 
 (1) Fixed:    Updated cat_surf_render function.
 
+
 ------------------------------------------------------------------------
-r962 | dahnke | 2016-06-24 13:30:52
+
+Changed paths:
+M       CHANGES.txt
+M       Contents.m
+M       html/cat.html
+M       html/cat.txt
+
+Fixed: Wrong (old) release number was shwon in html pages. 
+------------------------------------------------------------------------
+r963 | gaser | 2016-07-18 15:48:05
